# Singidunum-DNNCV

./: .gitignore  pyproject.toml
Exercise-1-CNN/: mnist-solution.ipynb
Exercise-1-MINST/: mnist-solution.ipynb
Exercise-2-CIFAR10/: cifar10-solution.ipynb
