[project]
name = "dnncv"
version = "0.1.0"
description = "Enviroment for DNNCV Course"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.17.3",
]
